# tli-v3-navigation_v2

./: .gitignore  .replit  AGENT_PROMPT.md  CHAT_LOG.md  CLEANUP_PROPOSAL_v5.56.0.md  CONVERSATION_LOG_2026-03-03.md  Create Taskbar Shortcut.bat  Install dependencies.bat  Launch bot.bat  MANUAL_TEST_CHECKLIST_v5.1.0.md  QT_PHASE1_PLAN.md  Start Auto Sync Main.bat  Torchlight Bot.lnk  WALL_DETECTION_PLAN.md  array_analysis.txt  card_state.json  dump_props.txt  final_structs.txt  main.py  plan.md  pyproject.toml  search_dump.py  search_mystic.txt  search_ninegrid.txt  search_results.txt  search_results_carditem.txt  search_structs.txt  search_ui_arrays.py  test_search.py
.github/: copilot-instructions.md
attached_assets/: Pasted--113-155-182-134-194-224-113-155-182-134-194-224-113-15_1771763898188.txt  Pasted--498-308-0-5538057742782152-0-5313807531380753-0-937254_1771763918669.txt  Pasted--498-309-0-5606060606060607-0-3900709219858156-0-552941_1771762535851.txt  Pasted--498-309-0-5606060606060607-0-3900709219858156-0-552941_1771762859765.txt  Pasted--INFO-Torchlight-Infinite-Bot-V2-v2-5-1-started-INFO-St_1771786616088.txt  Pasted--INFO-Torchlight-Infinite-Bot-V2-v2-7-0-started-INFO-Ho_1771868557372.txt  Pasted--INFO-Torchlight-Infinite-Bot-V2-v2-7-0-started-INFO-Ho_1771869012408.txt  Pasted--INFO-Torchlight-Infinite-Bot-V2-v2-7-0-started-INFO-Ho_1771870435843.txt  Pasted--INFO-Torchlight-Infinite-Bot-V2-v3-1-1-started-INFO-Ho_1771942946803.txt  Pasted--INFO-Torchlight-Infinite-Bot-V2-v3-1-3-started-INFO-Ho_1771943885050.txt  Pasted--INFO-Torchlight-Infinite-Bot-V2-v3-1-3-started-INFO-Ho_1771944434011.txt  Pasted--Phase-0-History-fast-path-no-move-spawn-point-check-Fo_1771628475853.txt  Pasted--Phase-0-History-fast-path-no-move-spawn-point-check-Fo_1771629010463.txt  Pasted--Phase-0-History-fast-path-no-move-spawn-point-check-Fo_1771629058752.txt  Pasted--Phase-0-History-fast-path-no-move-spawn-point-check-Fo_1771629150125.txt  Pasted--Phase-0-History-fast-path-no-move-spawn-point-check-Fo_1771629260795.txt  Pasted--Phase-0-History-fast-path-no-move-spawn-point-check-Fo_1771629844303.txt  (+85 more)
src/native/cpp/: CMakeLists.txt  module.cpp
(+121 files in other folders)
