[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchlight-infinite-bot"
version = "2.0.0"
description = "Torchlight Infinite Auto-Player Bot V2 - Memory Reading Edition"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.0",
    "PySide6>=6.8.0",
    "pymem>=1.14.0",
    "psutil>=5.9.0",
    "opencv-python-headless>=4.13.0.92",
    "numpy>=2.4.2",
    "mss>=10.1.0",
]

[project.optional-dependencies]
native-build = [
    "cmake>=3.30.0",
    "ninja>=1.12.0",
    "pybind11>=2.13.0",
    "scikit-build-core>=0.11.0",
]

[tool.tli.native]
source_dir = "src/native/cpp"
build_dir = "build/native"
module_name = "tli_native"
